...

class PreFilterViewController: UIViewController, UITableViewDelegate, UITableViewDataSource {
    
    var filterVC:FilterViewController!
    var categoriesVC:CategoriesViewController!
    
    var itens = ["Categories", "Filters"]
    var myTableView: UITableView!

    override func viewDidLoad() {
        super.viewDidLoad()
        let barHeight: CGFloat = UIApplication.shared.statusBarFrame.size.height
        let displayWidth: CGFloat = self.view.frame.width
...
